always display scrollbar to prevent pixel jitter when openeing imprint on large screens

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,6 +15,7 @@
 html{
   background-color:$color-main-background;
   font-family: 'Open Sans', Georgia, sans-serif;
+  overflow-y: scroll;
 }
 
 body{
